--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "javascript:obfuscate": "npx javascript-obfuscator ./ --output ./obfuscate --dead-code-injection true"
   },
   "author": "",
   "license": "ISC",
