--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "javascript-obfuscator": "^0.28.0"
   },
   "dependencies": {
-    "nexe": "^3.3.2"
+    "nexe": "^3.3.2",
+    "@tulpep/vtul-utilities": "^2.1.8"
   }
 }
